--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,9 @@ plugins {
     id 'org.springframework.boot' version '3.5.3'
     id 'io.spring.dependency-management' version '1.1.7'
 }
+ext {
+    springAiVersion = "1.0.0"
+}
 
 group = 'com.metaverse'
 version = '0.0.1-SNAPSHOT'
@@ -34,6 +37,9 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
+    // Spring AI - Open AI
+    implementation 'org.springframework.ai:spring-ai-starter-model-openai'
+
     // OAuth2.0 Client
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
     // Spring Security Libraries
@@ -44,6 +50,11 @@ dependencies {
     implementation 'io.jsonwebtoken:jjwt-api:0.12.6' // API 정의
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'  // 구현체
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6' // JSON 파싱/생성을 위한 Jackson 바인딩
+}
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.ai:spring-ai-bom:$springAiVersion"
+    }
 }
 
 tasks.named('test') {
